hack swipe box to enable the top bar and action in mobile

--- a/public/assets/client/css/default.css
+++ b/public/assets/client/css/default.css
@@ -69,3 +69,12 @@ a:hover.text-white {
     color: #8DCBFF;
     text-decoration: none;
 }
+
+/**/
+#swipebox-action.visible-bars {
+    display: block !important;
+}
+
+#swipebox-caption.visible-bars {
+    display: block !important;
+}
